fixed up with semantic page section elements
html5 elements of header, main, footer

--- a/index.html
+++ b/index.html
@@ -7,20 +7,19 @@
 </head>
 
 <body>
+    <header>
+       <h1>Testing display of HTML elements - this is H1</h1>
+    </header>
+    <main>
+       <p>This page contains a bunch of HTML Elements and text. You can copy the source code and use it test out various CSS Properties. For testing purposes, you may use <a href="css-linking#internal"><dfn>internal styles</dfn></a>. Recall that these CSS rules are placed in between the <code>head</code> tags using the following format:</p>
 
-<h1>Testing display of HTML elements</h1>
-<p>This page contains a bunch of HTML Elements and text. You can copy the source code and use it test out various CSS Properties. For testing purposes, you may use <a href="css-linking#internal"><dfn>internal styles</dfn></a>. Recall that these CSS rules are placed in between the <code>head</code> tags using the following format:</p>
-
-<pre><code>&lt;style type=&quot;text/css&quot;&gt;
+       <pre>
+       	   <code>&lt;style type=&quot;text/css&quot;&gt;
   selector {
     property: value
   }
 &lt;/style&gt;</code>
-</pre>
-
-
-<h1>This is 1st level heading</h1>
-<p>This is a test paragraph.</p>
+       </pre>
 <h2>This is 2nd level heading</h2>
 <p>This is a test paragraph.</p>
 <h3>This is 3rd level heading</h3>
@@ -47,8 +46,7 @@
 <p>The following contains links to the Comm-244 home page</p>
 
 <p>
-	<a href="http://web.simmons.edu/~grovesd/comm244">Comm-244 Website</a>,
-	<a href="http://web.simmons.edu/~grovesd/comm244/week3">Week 3 page for class</A>
+	<a href="https://ccsute350.gitbook.io/te350/">Gitbook Homepage</a>,
 </p>
 
 <h2>Lists</h2>
@@ -72,7 +70,8 @@
 </ol>
 
 <p>This is a paragraph before a <strong>definition</strong> list (<code>dl</code>). In principle, such a list should consist of <em>terms</em> and associated definitions. But many authors use <code>dl</code> elements for fancy "layout" things. Usually the effect is not <em>too</em> bad, if you design user style sheet rules for <code>dl</code> which are suitable for real definition lists.</p>
-
+	</main>
+	<footer>
 <dl>
 	<dt> recursion <dt>
 	<dd> see recursion </dd>
@@ -83,7 +82,7 @@
 	<dt> term</dt>
 	<dd> a word or other expression taken into specific use in a well-defined meaning, which is often defined rather rigorously, even formally, and may differ quite a lot from an everyday meaning</dd>
 </dl>
-
+	</footer>
 
 
 </body>
