Did the Homework!

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
 	<meta charset="UTF-8">
     <title>HTML Page for Testing CSS</title>
+    <!--I know how external stylesheets work! -->
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="B" id="pg">
     <header>
        <h1>Testing display of HTML elements - this is H1</h1>
     </header>
     <main>
-       <p>This page contains a bunch of HTML Elements and text. You can copy the source code and use it test out various CSS Properties. For testing purposes, you may use <a href="css-linking#internal"><dfn>internal styles</dfn></a>. Recall that these CSS rules are placed in between the <code>head</code> tags using the following format:</p>
+       <p style="font-style: italic;">This page contains a bunch of HTML Elements and text. You can copy the source code and use it test out various CSS Properties. For testing purposes, you may use <a href="css-linking#internal"><dfn>internal styles</dfn></a>. Recall that these CSS rules are placed in between the <code>head</code> tags using the following format:</p>
 
        <pre>
        	   <code>&lt;style type=&quot;text/css&quot;&gt;
@@ -31,6 +32,10 @@
 <h6>This is 6th level heading</h6>
 <p>This is a test paragraph.</p>
 
+ <figure>
+  <img src="img.jpg" alt="A Cat!">
+</figure> 
+
 <h2>Basic block level elements</h2>
 
 <p>This is a normal paragraph (<code>p</code> element). To add some length to it, let us mention that this page was primarily written for testing the effect of <strong>user style sheets</strong>. You can use it for various other purposes as well, like just checking how your browser displays various HTML elements.</p> 
@@ -39,7 +44,7 @@
 
 <div>This is a <code>div</code> element. Authors may use such elements instead of paragraph markup for various reasons. (End of <code>div</code>.)</div>
 
-<blockquote>
+<blockquote id="BQ">
 	<p>This is a <i>block quotation</i> containing a single paragraph. Well, not quite, since this is not <em>really</em> quoted text, but I hope you understand the point. After all, this page does not use HTML markup very normally anyway.</p>
 </blockquote>
 
